assets/scss/_mixins.scss
@mixin container {
  margin: 0 auto;
  max-width: #{0.9 * $breakpoint--xl};
  position: relative;
  width: 90%;
}

@mixin page {
  @include container;
  min-height: calc(100vh - 4rem);
  min-height: calc(var(--vh, 1vh) * 100 - 4rem);
  padding-top: 6rem;
  padding-bottom: 3rem;

  @media print {
    margin: 0;
    padding: 0;
    width: 100%;
  }
}

@mixin dots($clip-path) {
  @supports (clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%)) {
    &::before {
      $background-size: 0.75rem;
      $background-dots: radial-gradient($color__primary--muted 0.075rem, transparent 0.075rem);

      background-image: $background-dots, $background-dots;
      background-size: $background-size $background-size;
      background-position: 0 0, $background-size / 2 $background-size / 2;
      clip-path: $clip-path;
      content: '';
      height: 100%;
      left: 50%;
      position: absolute;
      top: 0;
      transform: translateX(-50%);
      width: 100vw;
      z-index: -1;
    }
  }
}

@mixin title {
  font-weight: 500;
  text-shadow: 0.125rem 0.125rem $color__primary--muted;
  -webkit-text-stroke: $border-weight $color__primary;
  -webkit-text-fill-color: transparent;
}

@mixin title--primary {
  color: $color__primary;
  font-size: 110%;
  font-weight: 900;
  line-height: 1;
  -webkit-text-stroke: 0 currentColor;
  -webkit-text-fill-color: currentColor;
}

@mixin link($color: $color__body) {
  @include link--shadow($color);

  background-image: linear-gradient($color__primary, $color__primary);
  background-size: 0% $border-weight;
  background-repeat: no-repeat;
  background-position: bottom left;
  box-shadow: 0 #{-$border-weight} $color__primary--muted inset;
  color: $color__primary;
  transition: background-size 300ms ease-out;

  &:hover {
    @include link--active;
  }
}

@mixin link--active {
  background-size: 100% $border-weight;
}

@mixin link--shadow($color) {
  $text-shadow: 0px 0px $color;
  @for $x from -4 through 4 {
    @for $y from 0 through 6 {
      $text-shadow: #{$text-shadow}, #{$x / 20}ex #{$y / 50}em $color;
    }
  }
  text-shadow: $text-shadow;
}

@mixin button {
  background-color: $color__body--overlay;
  border: $border-weight solid $color__primary;
  border-radius: $border-radius;
  color: $color__primary;
  cursor: pointer;
  font-size: 120%;
  font-family: $font__fancy;
  opacity: 1;
  padding: 0.5rem 1rem;
  position: relative;
  transition: opacity 150ms ease, transform 150ms ease;

  &::before {
    content: '';
    border-radius: $border-radius;
    box-shadow: $box-shadow--primary-small;
    height: calc(100% + #{2 * $border-weight});
    left: -$border-weight; // Account for border
    opacity: 0.5;
    position: absolute;
    top: -$border-weight;
    transition: box-shadow 150ms ease;
    width: calc(100% + #{2 * $border-weight});
    z-index: -1;
  }

  &::after {
    background-image: linear-gradient(transparent 50%, #{transparentize(black, 0.9)});
    content: '';
    border-radius: $border-radius;
    height: calc(100% + #{2 * $border-weight});
    left: -$border-weight;
    position: absolute;
    top: -$border-weight;
    width: calc(100% + #{2 * $border-weight});
    z-index: 1;
  }

  &:hover {
    opacity: 0.9;

    &::before {
      box-shadow: $box-shadow--primary;
    }
  }

  &[disabled] {
    cursor: not-allowed;
    opacity: 0.5;
    transform: none;

    &::before {
      box-shadow: $box-shadow--primary-small;
    }
  }
}

@mixin button--primary {
  background-color: $color__primary;
  color: $color__body;
  transition: opacity 150ms ease, transform 150ms ease;

  &::before {
    opacity: 1;
  }

  &::after {
    background-image: linear-gradient(#{transparentize(white, 0.7)} 20%, transparent);
  }
}

